add get and set in the MyGameGui and fix KML_Logger,need to do changes in the MyGameAlgo